--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-moment": "^0.7.9",
     "react-scripts": "1.1.4",
     "react-stripe-checkout": "^2.6.3"
   },
